# gui_trading_app

./: CMakeLists.txt  DISPLAY_GUIDE.md  Makefile  PROJECT_SUMMARY.md  README.md  USAGE_GUIDE.md  api_test  api_test.cpp  indian_stocks_test  indian_stocks_test.cpp  live_data_display.cpp  live_display  minimal_test.cpp  setup.sh  sfml_test  sfml_test.cpp  simple_main.cpp  test_core.cpp  tgui_test  tgui_test.cpp  window_test.cpp
include/: data_fetcher.h  gui_app.h  history_manager.h  market_data.h  simple_hft_gui.h  strategy_engine.h  technical_indicators.h  trading_signal.h  yahoo_finance_api.h
resources/: config.ini  nifty50_symbols.txt
src/: data_fetcher.cpp  gui_app.cpp  history_manager.cpp  main.cpp  market_data.cpp  simple_hft_gui.cpp  strategy_engine.cpp  technical_indicators.cpp  trading_signal.cpp  yahoo_finance_api.cpp
